--- a/app/views/pages/finalizandopagamento.ejs
+++ b/app/views/pages/finalizandopagamento.ejs
@@ -137,17 +137,8 @@
        <p class="copyright">©2024 Vintélo. Todos os direitos reservados.</p>
     </footer>
   </section>
-    <script src="js/pagamento.js"></script>
-
-                <script>
-        window.isAuthenticated = <%= typeof autenticado !== 'undefined' && autenticado && autenticado.autenticado ? 'true' : 'false' %>;
-        <% if (typeof autenticado !== 'undefined' && autenticado && autenticado.tipo) { %>
-        window.userType = '<%= autenticado.tipo %>';
-        <% } else if (typeof autenticado !== 'undefined' && autenticado && autenticado.autenticado) { %>
-        window.userType = 'c';
-        <% } %>
-    </script>
-    <script src="/js/navegacao.js"></script>
+  <script src="js/pagamento.js"></script>
+  <script src="/js/perfil-autenticado.js"></script>
     <script src="/js/navegacao.js"></script>
     <script>
         function goBack() {
