--- a/app/views/pages/minhascompras.ejs
+++ b/app/views/pages/minhascompras.ejs
@@ -176,15 +176,7 @@
       </section>
        <p class="copyright">©2024 Vintélo. Todos os direitos reservados.</p>
     </footer>
-    
-                <script>
-        window.isAuthenticated = <%= typeof autenticado !== 'undefined' && autenticado && autenticado.autenticado ? 'true' : 'false' %>;
-        <% if (typeof autenticado !== 'undefined' && autenticado && autenticado.tipo) { %>
-        window.userType = '<%= autenticado.tipo %>';
-        <% } else if (typeof autenticado !== 'undefined' && autenticado && autenticado.autenticado) { %>
-        window.userType = 'c';
-        <% } %>
-    </script>
+    <script src="/js/perfil-autenticado.js"></script>
     <script src="/js/navegacao.js"></script>
     <script src="/js/navegacao.js"></script>
     <script src="script/minhascompras.js"></script>
@@ -194,6 +186,6 @@
             window.history.back();
         }
     </script>
-</body>
+    </body>
     </html>
     
